--- a/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
+++ b/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
@@ -70,9 +70,16 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Login_Portal.Master.cs">
+      <DependentUpon>Login_Portal.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Login_Portal.Master.designer.cs">
+      <DependentUpon>Login_Portal.Master</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Login_Portal.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
