--- a/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
+++ b/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Admin_AddStudent.aspx" />
     <Content Include="Admin_Home.aspx" />
     <Content Include="App_Data\CMVMAS.mdb" />
     <Content Include="Default.aspx" />
@@ -79,6 +80,13 @@
     </Compile>
     <Compile Include="Admin.Master.designer.cs">
       <DependentUpon>Admin.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_AddStudent.aspx.cs">
+      <DependentUpon>Admin_AddStudent.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin_AddStudent.aspx.designer.cs">
+      <DependentUpon>Admin_AddStudent.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin_Home.aspx.cs">
       <DependentUpon>Admin_Home.aspx</DependentUpon>
