--- a/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
+++ b/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
@@ -73,6 +73,7 @@
     <Content Include="Admin_Profs.aspx" />
     <Content Include="App_Data\CMVMAS.mdb" />
     <Content Include="CSS\admin.css" />
+    <Content Include="CSS\adminStuds.css" />
     <Content Include="Default.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
