--- a/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
+++ b/IT123P - Course Management Systemm/IT123P - Course Management Systemm.csproj
@@ -74,6 +74,7 @@
     <Content Include="App_Data\CMVMAS.mdb" />
     <Content Include="CSS\admin.css" />
     <Content Include="CSS\adminStuds.css" />
+    <Content Include="CSS\default.css" />
     <Content Include="Default.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -85,6 +86,7 @@
     <Compile Include="Admin.Master.designer.cs">
       <DependentUpon>Admin.Master</DependentUpon>
     </Compile>
+    <Compile Include="Administrator.cs" />
     <Compile Include="Admin_Studs.aspx.cs">
       <DependentUpon>Admin_Studs.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -128,6 +130,7 @@
       <DependentUpon>Login_Portal.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Login_Portal.Master" />
